<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:id="@+id/name_text"
                android:textAlignment="center"
                style="@style/NameStyle"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/nickname_edit" style="@style/Widget.AppCompat.EditText"
                android:textAppearance="@style/NameStyle" android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin" android:textAlignment="center"
                android:hint="@string/what_is_your_nickname"/>
        <Button
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/done_button"
                android:layout_gravity="center_horizontal" android:fontFamily="@font/roboto"
                style="@style/Widget.AppCompat.Button.Colored"/>
        <TextView
                android:text="TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/nickname_text" style="@style/NameStyle"
                android:textAlignment="center" android:visibility="gone"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" app:srcCompat="@android:drawable/btn_star_big_on"
                android:id="@+id/star_image" android:contentDescription="@string/yellow_star"
                android:layout_marginTop="@dimen/layout_margin"/>
        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/bio_text"
                    android:textAppearance="@style/NameStyle" android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:lineSpacingMultiplier="1.2"/>
        </ScrollView>

    </LinearLayout>
</layout>